<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >
	<TextView  
	    android:layout_width="fill_parent" 
	    android:layout_height="wrap_content" 
	    android:text="@string/app_welcome"
	    android:gravity="center_horizontal"
	    android:padding="10sp"
	    android:textSize="25sp"
	    />
	<Button
		android:id="@+id/btn_set_master_pass"
		android:text="@string/btn_change_master_pass"
		android:layout_width="fill_parent" 
		android:layout_height="wrap_content"
		/>
	<LinearLayout
	    android:orientation="horizontal"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:paddingTop="20sp"
    	android:paddingBottom="20sp"
    	>	
		<Button
			android:id="@+id/btn_insert"
			android:text="@string/btn_insert"
			android:layout_width="wrap_content" 
    		android:layout_height="wrap_content"
    		android:padding="5sp"
    		android:layout_weight="1"
		/>
		<Button
			android:id="@+id/btn_update"
			android:text="@string/btn_update"
			android:layout_width="wrap_content" 
    		android:layout_height="wrap_content"
    		android:padding="5sp"
    		android:layout_weight="1"
		/>
		<Button
			android:id="@+id/btn_delete"
			android:text="@string/btn_delete"
			android:layout_width="wrap_content" 
    		android:layout_height="wrap_content"
    		android:layout_weight="1"
    		android:padding="5sp"
    		
		/>
		
	</LinearLayout>	
	<Button
			android:id="@+id/btn_fetchAll"
			android:layout_width="fill_parent" 
    		android:layout_height="wrap_content"
    		android:padding="5sp"
    		android:text="@string/btn_fetchAll"
		/>	
</LinearLayout>
