<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent" android:layout_height="wrap_content"
	android:id="@+id/display_rootLayout">
	<TableRow android:gravity="center_horizontal">
		<TextView android:text="@string/display_title"
			android:layout_width="fill_parent" layout_height="wrap_content"
			android:gravity="center_horizontal" 
			android:textSize="25sp"/>
	</TableRow>
	
	<TableRow android:id="@+id/display_headers" android:gravity="center" >
		<TextView android:text="@string/display_passkey_column_header"
			android:layout_width="wrap_content" layout_height="wrap_content" 
			android:layout_weight="1"
			android:padding="10sp" android:gravity="center"/>		
		<TextView android:text="@string/display_username_column_header"
			android:layout_width="wrap_content" layout_height="wrap_content" 
			android:layout_weight="1" android:padding="10sp"/>
		<TextView android:text="@string/display_password_column_header"
			android:layout_width="wrap_content" layout_height="wrap_content" 
			android:layout_weight="1" android:padding="10sp"/>
	</TableRow>
	
	<ScrollView android:id="@+id/display_scroll" 
		android:layout_width="fill_parent" 
		android:layout_height="wrap_content">
		
	</ScrollView>
</TableLayout>
