<?xml version="1.0" encoding="utf-8"?>
<TableLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent">
  <TableRow android:layout_width="fill_parent"
  	android:layout_height="wrap_content"
  	android:layout_gravity="center_horizontal">
  	<TextView  
		android:layout_height="wrap_content"
		android:text="@string/insert_title"
		android:textSize="20dp"
		android:padding="10sp"
		android:layout_weight="1"
		android:layout_width="match_parent" 
		android:gravity="center_horizontal"/> 
  </TableRow>
  <TableRow>
  			<TextView  
			    android:layout_width="wrap_content" 
			    android:layout_height="wrap_content" 
			    android:text="@string/insert_txt_pass_key"
			    android:gravity="center_horizontal"
			    android:padding="10sp"
			    android:textSize="15sp"
			    android:layout_weight="0"
		    	/>
		     <EditText
			   	android:id="@+id/insert_key"
			   	android:layout_width="fill_parent" 
			   	android:minWidth="150sp"
				android:layout_height="wrap_content"
				android:inputType="text"
				android:layout_weight="1"
				android:textSize="15sp"
				/>
  </TableRow>
  
  <TableRow>
  			<TextView  
			    android:layout_width="wrap_content" 
			    android:layout_height="wrap_content" 
			    android:text="@string/insert_txt_username"
			    android:gravity="center_horizontal"
			    android:padding="10sp"
			    android:textSize="15sp"
			    android:layout_weight="0"
		    	/>
		     <EditText
			   	android:id="@+id/insert_username"
			   	android:layout_width="fill_parent" 
			   	android:minWidth="150sp"
				android:layout_height="wrap_content"
				android:inputType="text"
				android:layout_weight="1"
				android:textSize="15sp"
				/>
  </TableRow>
  
  <TableRow>
  			<TextView  
			    android:layout_width="wrap_content" 
			    android:layout_height="wrap_content" 
			    android:text="@string/insert_txt_password"
			    android:gravity="center_horizontal"
			    android:padding="10sp"
			    android:textSize="15sp"
			    android:layout_weight="0"
		    	/>
		     <EditText
			   	android:id="@+id/insert_password"
			   	android:layout_width="fill_parent" 
			   	android:minWidth="150sp"
				android:layout_height="wrap_content"
				android:inputType="textPassword"
				android:layout_weight="1"
				android:textSize="15sp"
				/>
  </TableRow>
  
  <TableRow
  	android:layout_width="fill_parent" 
	android:layout_height="wrap_content" 
	android:gravity="center_horizontal">
  			<Button
  				android:id="@+id/insert_btn"
  				android:layout_width="fill_parent" 
			    android:layout_height="wrap_content" 
			    android:text="@string/insert_btn"
			    android:padding="10sp"
			    android:textSize="15sp"
  			/>
  			<Button
  				android:id="@+id/insert_btn_Back"
  				android:layout_width="fill_parent" 
			    android:layout_height="wrap_content" 
			    android:text="@string/btn_Back"
			    android:padding="10sp"
			    android:textSize="15sp"
  			/>
  </TableRow>
  
</TableLayout>
