<?xml version="1.0" encoding="utf-8"?>
<TableLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="fill_parent"
  android:layout_height="wrap_content">
  
  <TextView
  	android:layout_width="fill_parent"
  	android:layout_height="wrap_content"
  	android:text="@string/delete_title"
  	android:gravity="center_horizontal"
  	android:textSize="20dp"
  	android:padding="10sp"
  />
  	<TableRow>
  		<TextView  
			    android:layout_width="wrap_content" 
			    android:layout_height="wrap_content" 
			    android:text="@string/delete_txt_pass_key"
			    android:gravity="center_horizontal"
			    android:padding="10sp"
			    android:textSize="15sp"
			    android:layout_weight="0"
		    	/>
		     <AutoCompleteTextView 
		     	android:id="@+id/delete_key"
			   	android:layout_width="fill_parent" 
			   	android:minWidth="150sp"
				android:layout_height="wrap_content"
				android:inputType="text"
				android:layout_weight="1"
				android:textSize="15sp"
		     />
  	</TableRow>
  	
  	<TableRow
	  	android:layout_width="fill_parent" 
		android:layout_height="wrap_content" 
		android:gravity="center_horizontal">
  			<Button
  				android:id="@+id/delete_btn"
  				android:layout_width="fill_parent" 
			    android:layout_height="wrap_content" 
			    android:text="@string/delete_btn"
			    android:padding="10sp"
			    android:textSize="15sp"
			    android:layout_weight="2"
  			/>
  			<Button
  				android:id="@+id/delete_btn_Back"
  				android:layout_width="fill_parent" 
			    android:layout_height="wrap_content" 
			    android:text="@string/btn_Back"
			    android:padding="10sp"
			    android:textSize="15sp"
			    android:layout_weight="1"
  			/>
 	 </TableRow>
  </TableLayout>

